[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rtl_temps"
version = '0.1.0'
description = "Project for running RTL-SDR for temp collection"
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/rtl_temps'
packages = [
    { include = '.' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
kavalkilu = { git = "https://github.com/barretobrock/kavalkilu.git" }
pukr = { git = "https://github.com/barretobrock/pukr.git", branch = "main" }

# Optional dependencies would go down here
# example = { version = ">=1.7.0", optional = true }

[tool.poetry.dev-dependencies]
pre-commit = "^2"
pytest = "^7"
pytest-cov = "^3"
flake8 = "^4"
tox = "^3"

[tool.poetry.extras]
test = ["pytest"]

[tool.isort]
profile = 'black'
force_grid_wrap = 2
force_sort_within_sections = true
skip_gitignore = true
skip_glob = ['*_pb2.py', '*_pb2_grpc.py']
